# Fhir-MCP

./: .chatbot-config.json  .gitignore  README.md  fhir_server.py  fhir_timeline_agent.py  fhir_tools.py  firelyserver-license.json  firelyserver.config.json  pyproject.toml  requirements.txt  setup.py  system_prompt.txt
test_data_bundles/: fhir_patient_001_Sakura_Garcia.json  fhir_patient_002_Sakura_Nguyen.json  fhir_patient_003_Sakura_Garcia.json  fhir_patient_004_Aisha_Garcia.json  fhir_patient_005_Sakura_Nguyen.json  fhir_patient_006_Sakura_Patel.json  fhir_patient_007_Aisha_Chen.json  fhir_patient_008_Aisha_Nguyen.json  fhir_patient_009_Jasmine_Garcia.json  fhir_patient_010_Aisha_Nguyen.json  fhir_patient_011_Sakura_Garcia.json  fhir_patient_012_Aisha_Nguyen.json  fhir_patient_013_Aisha_Nguyen.json  fhir_patient_014_Aisha_Nguyen.json  fhir_patient_015_Sakura_Nguyen.json  fhir_patient_016_Aisha_Nguyen.json  fhir_patient_017_Sarita_Nguyen.json  fhir_patient_018_Aisha_Nguyen.json  fhir_patient_019_Sakura_Chen.json  fhir_patient_020_Naoki_Abadi.json  fhir_patient_021_Aisha_Nguyen.json  fhir_patient_022_Sakura_Chen.json  fhir_patient_023_Aisha_Nguyen.json  fhir_patient_024_Sakura_Nguyen.json  fhir_patient_025_Aisha_Nguyen.json  postman_bundle_part01_of_06_20250620_211844.json  postman_bundle_part02_of_06_20250620_211844.json  postman_bundle_part03_of_06_20250620_211844.json  postman_bundle_part04_of_06_20250620_211844.json  postman_bundle_part05_of_06_20250620_211844.json  postman_bundle_part06_of_06_20250620_211844.json
