[project]
name = "fhir-careplan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "async>=0.6.2",
    "crewai>=0.30.11",
    "crewai-tools>=0.0.1",
    "dataclasses-json>=0.5.0",
    "fastmcp>=2.7.1",
    "langchain-openai>=0.1.7,<0.2.0",
    "mcp-use>=1.3.1",
    "mcp[cli]>=1.9.3",
    "nest-asyncio>=1.6.0",
    "openai>=1.86.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0,<14.0.0",
    "setuptools>=80.9.0",
    "tenacity>=8.0.0",
]
